welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:4: error: ab is already defined as variable ab
                                           var ab = ab - 10;
                                                       ^blueTicket:4: error: recursive variable ab needs type
                                           var ab = ab - 10;
                                                    ^